--- a/style.css
+++ b/style.css
@@ -63,11 +63,7 @@ ul {
 body {
   display: flex;
   flex-flow: column;
-}
-
-.top-banner-container {
-  flex-grow: 0;
-
+  font-family: "Sora", sans-serif;
 }
 
 /* Positioning for top header bar so that content displays on one line with 
@@ -107,15 +103,61 @@ and image on right*/
   align-self: center;
 }
 
-
-/* Info section positioning */
-.info-container {
-  display: flex;
-  flex-direction: column;
+.info-title {
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1f2937;
+  text-align: center;
 }
 
+.subtext {
+  color: #314258;
+}
+
+/* Info section positioning */
 .services-container {
   display: flex;
 }
+
+.info-container {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  padding: 2% 10%;
+}
+
+.item {
+  display: flex;
+  flex-flow: column wrap;
+  /* this allows bar to resize - if want to be static set to width 200px */
+  width: 100%;
+}
+
+/* Quote container */
+
+.quote-container {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  background-color: #e5e7eb;
+  padding: 2% 10%;
+}
+
+.quote-text {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: lighter;
+  color: #1f2937;
+  text-align: left;
+}
+
+.quote-source {
+  font-size: 28px;
+  font-weight: bold;
+  color: #1f2937;
+  text-align: right;
+}
+
+
 
 
